Updated gruntfile to include the susy ruby gem

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
 	"name": "dror-baitel",
+	"description": "Dror Baitel's personal portfolio website",
+	"repository": "",
 	"version": "0.0.0",
 	"dependencies": {},
 	"devDependencies": {
