--- a/bower.json
+++ b/bower.json
@@ -5,9 +5,9 @@
     "requirejs": "~2.1.8",
     "modernizr": "~2.6.2",
     "jquery": "~1.10.2",
-    "handlebars.js": "~1.0.12",
-    "handlebars-latest.js": "http://builds.handlebarsjs.com.s3.amazonaws.com/handlebars-latest.js",
+    "handlebars.js": "~1.1.2",
     "howler": "~1.1.14",
+    "momentjs": "~2.2.1",
     "font-awesome": "~4.0.1"
   },
   "devDependencies": {}
