--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,9 @@
 language: node_js
 node_js:
- - "0.10"
- - "0.8"
+- '0.10'
+- '0.8'
+deploy:
+  provider: heroku
+  api_key:
+    secure: B6KgZ0t7iO2AdsMlsxk7NisgZ7GmwO4A7y1a2jlcHGkf16KDGyd4hDcXVb8LOaGHpOTehgCI3VEWmPdElafSM6PeG83ttKTjOfxIPsUTvW9A4/q0njkl1cvJchHz+qm4BYgUJ3fu+Pl3r2LZLAXka/vQzn8SZNnhGp4bedgYeLg=
+  skip_cleanup: true
