--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 	"dependencies": {},
 	"devDependencies": {
 		"grunt": "~0.4.1",
+		"grunt-cli": "~0.1.11",
 		"grunt-contrib-copy": "~0.4.1",
 		"grunt-contrib-concat": "~0.3.0",
 		"grunt-contrib-uglify": "~0.2.0",
