Adding bower to travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,4 +10,5 @@ deploy:
   skip_cleanup: true
   strategy: git
 script:
+    - ./node_modules/bower/bin/bower install
     - ./node_modules/grunt-cli/bin/grunt build
