--- a/package.json
+++ b/package.json
@@ -1,37 +1,38 @@
 {
-	"name": "dror-baitel",
-	"description": "Dror Baitel's personal portfolio website",
-	"repository": "",
-	"version": "0.0.0",
-	"dependencies": {},
-	"devDependencies": {
-		"grunt": "~0.4.1",
-		"grunt-cli": "~0.1.11",
-		"grunt-contrib-copy": "~0.4.1",
-		"grunt-contrib-concat": "~0.3.0",
-		"grunt-contrib-uglify": "~0.2.0",
-		"grunt-contrib-compass": "~0.5.0",
-		"grunt-contrib-jshint": "~0.6.3",
-		"grunt-contrib-cssmin": "~0.6.0",
-		"grunt-contrib-connect": "~0.5.0",
-		"grunt-contrib-clean": "~0.5.0",
-		"grunt-contrib-htmlmin": "~0.1.3",
-		"grunt-bower-requirejs": "~0.7.0",
-		"grunt-contrib-requirejs": "~0.4.1",
-		"grunt-contrib-imagemin": "~0.2.0",
-		"grunt-contrib-watch": "~0.5.2",
-		"grunt-rev": "~0.1.0",
-		"grunt-autoprefixer": "~0.2.0",
-		"grunt-usemin": "~0.1.10",
-		"grunt-mocha": "~0.4.0",
-		"grunt-modernizr": "~0.3.0",
-		"grunt-svgmin": "~0.2.0",
-		"grunt-concurrent": "~0.3.0",
-		"load-grunt-tasks": "~0.1.0",
-		"time-grunt": "~0.1.1",
-		"grunt-contrib-handlebars": "~0.5.10"
-	},
-	"engines": {
-		"node": ">=0.8.0"
-	}
+  "name": "dror-baitel",
+  "description": "Dror Baitel's personal portfolio website",
+  "repository": "",
+  "version": "0.0.0",
+  "dependencies": {},
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-cli": "~0.1.11",
+    "grunt-contrib-copy": "~0.4.1",
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-uglify": "~0.2.0",
+    "grunt-contrib-compass": "~0.5.0",
+    "grunt-contrib-jshint": "~0.6.3",
+    "grunt-contrib-cssmin": "~0.6.0",
+    "grunt-contrib-connect": "~0.5.0",
+    "grunt-contrib-clean": "~0.5.0",
+    "grunt-contrib-htmlmin": "~0.1.3",
+    "grunt-bower-requirejs": "~0.7.0",
+    "grunt-contrib-requirejs": "~0.4.1",
+    "grunt-contrib-imagemin": "~0.2.0",
+    "grunt-contrib-watch": "~0.5.2",
+    "grunt-rev": "~0.1.0",
+    "grunt-autoprefixer": "~0.2.0",
+    "grunt-usemin": "~0.1.10",
+    "grunt-mocha": "~0.4.0",
+    "grunt-modernizr": "~0.3.0",
+    "grunt-svgmin": "~0.2.0",
+    "grunt-concurrent": "~0.3.0",
+    "load-grunt-tasks": "~0.1.0",
+    "time-grunt": "~0.1.1",
+    "grunt-contrib-handlebars": "~0.5.10",
+    "bower": "~1.2.8"
+  },
+  "engines": {
+    "node": ">=0.8.0"
+  }
 }
