--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "description": "Dror Baitel's personal portfolio website",
   "homepage": "http://www.drorbaitel.com",
   "repository": {
-  	"type": "git",
-  	"url": "https://github.com/josephspens/dror-baitel"
+    "type": "git",
+    "url": "https://github.com/josephspens/dror-baitel"
   },
   "version": "0.0.0",
   "author": {
-  	"name": "Joseph Spens",
-  	"email": "joseph@spens.us",
-  	"url": "http://spens.us"
+    "name": "Joseph Spens",
+    "email": "joseph@spens.us",
+    "url": "http://spens.us"
   },
-  "main": "dist/server.js",
-  "dependencies": {},
+  "dependencies": {
+    "statik": "~1.2.5",
+    "express": "~3.4.7"
+  },
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-cli": "~0.1.11",
