--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_script:
  - gem update --system
  - gem install compass
  - npm install -g grunt-cli bower
+ - mkdir dist
 script:
  # We want to gate on passing tests and a successful build
  - bower install
