--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ script:
  # We want to gate on passing tests and a successful build
  - bower install
  - grunt
+after_success:
+ - git subtree push --prefix dist origin master
 deploy:
  provider: heroku
  api_key:
