--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,19 @@ script:
  - bower install
  - grunt
 after_success:
- - git subtree push --prefix dist origin master
+ # Any command that using GH_OAUTH_TOKEN must pipe the output to /dev/null to not expose your oauth token
+ - git submodule add -b master https://aAWm33y3gx8XyB08Rz/wIYnws5PMehxwsqcDbzT0PDreTgX/y7lG/gRQJkB2/tLhDJwnnirA59PHea3oxsEjPveCc174FbtT/+TmmJI7UKotmeJO9B3mmP2/QiEgRo3z+yCcY7uZhO5/+2BcPNmGCTL6D3d1yHJ14OFFeGVIzLs=@github.com/josephspens/dror-baitel site > /dev/null 2>&1
+ - cd site
+ - if git checkout master; then git checkout -b master; fi
+ - git rm -r .
+ - cp -R ../dist/* .
+ - cp ../dist/.* .
+ - git add -f .
+ - git config user.email "jpspens@gmail.com"
+ - git config user.name "Joseph Spens"
+ - git commit -am "adding the yeoman build files to master"
+ # Any command that using GH_OAUTH_TOKEN must pipe the output to /dev/null to not expose your oauth token
+ - git push https://aAWm33y3gx8XyB08Rz/wIYnws5PMehxwsqcDbzT0PDreTgX/y7lG/gRQJkB2/tLhDJwnnirA59PHea3oxsEjPveCc174FbtT/+TmmJI7UKotmeJO9B3mmP2/QiEgRo3z+yCcY7uZhO5/+2BcPNmGCTL6D3d1yHJ14OFFeGVIzLs=@github.com/josephspens/dror-baitel HEAD:master > /dev/null 2>&1
 deploy:
  provider: heroku
  api_key:
